
* The :attr:`~stalker.models.version.Version.version_number` in
  :class:`~stalker.models.version.Version` is now generated automatically if it
  is skipped or given as None or it is too low where there is already a version
  number for the same Version series (means attached to the same
  :class:`~stalker.models.task.Task` and has the same
  :attr:`~stalker.models.version.Version.take_name`).

* Finished the design of 'Login' page.

0.2.0.a1
--------
* Converted the whole system to a Pyramid Web application. If the previous
  implementations investigated, it will be understood that it was only the
  database model of a Web Application.

* Changed the :meth:`~stalker.db.setup` arguments. It is now accepting a
  dictionary instead of just a string to comply with the SQLAlchemy scaffold
  and this dictionary should contain keys for the SQLAlchemy engine setup.
  There is another utility that comes with Pyramid to setup the database under
  the `scripts` folder, it is also working without any problem with
  :mod:`~stalker.db`\ .

* The ``session`` variable is renamed to ``DBSession`` and is now a scopped
  session, so there is no need to use ``DBSession.commit`` it will be handled
  by the system it self.

* Even though the ``DBSession`` is using the Zope Transaction Manager extension
  normally, in the database tests no extension is used because the transaction
  manager was swallowing all errors and it was a little weird to try to catch
  this errors out of the ``with`` block.

* Refactored the code, all the models are now in separate python files, but can
  be directly imported from the main stalker module as shown::
  
    from stalker import User, Department, Task
  
  By using this kind of organization, both development and usage will be eased
  out.

* :attr:`~stalker.models.task.Task.task_of` now only accepts
  :attr:`~stalker.models.entity.TaskableEntity` instances.

* Updated the examples. It is now showing how to extend SOM correctly. 
